# leptos-tailwind

./: Cargo.toml  README.md  index.html
src/: app.rs  main.rs  mod.rs
src/api/: _api_request.rs  auth_api.rs  cart_api.rs  mod.rs  product_api.rs  users_api.rs
src/components/: mod.rs
src/components/base/: button.rs  collapsible.rs  icons.rs  mod.rs  sidebar.rs
src/components/ui/: mod.rs  private_header.rs  public_footer.rs  public_navigation.rs  side_navigation.rs  sidebar_navigation.rs
src/layouts/: mod.rs  private_layout.rs  public_layout.rs
src/pages/: dashboard.rs  home.rs  login.rs  mod.rs  not_found.rs
src/utils/: cn.rs  cookies.rs
styles/: input.css
