[package]
name = "leptos-tutorial"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
console_error_panic_hook = "0.1.7"
gloo-net = "0.6.0" # For client side HTTP requests
leptos = { version = "0.8.15", features = ["csr"] }
leptos-use = { version = "0.17.0", features = ["use_cookie"] }
leptos_router = "0.8.11"
reqwest = { version = "0.12.28", features = ["json"] }
serde = "1.0.228"
